0.58
----
1. Add a config option for selection appearance - defaults to flat.
2. Fix entry fields and dark colour schemes.
3. Use background colour for disabled scrollbar buttons.
4. Make custom styles work under Qt4 as well.
5. Make 'slight' rounding more 'slight' -  as per pre-cairo version.

0.57.1
------
1. Better arrows positions on scrollbar steppers B and C.

0.57
----
1. Modify defaults:
     Turn off shade menubar only of active window
     Set default button indicator to tint
2. Re-added option to highlight background of check/radio text on mouseover.
3. Use cairo for all drawing.
4. Highlight expander arrows on mouse over.

0.56.3
------
 1. Fix tabs on Firefox 3 beta4
 2. Fix slight re-draw errors with scrollbar slider.
 3. Nicer positioning of down/right scrollbar arrows.
 4. Fix colours of tinted default button.
 5. QTC_MODIFY_MOZILLA compile fix - thanks to Ben de Groot.
 6. Don't set sliders to flat just because appearance is flat.
 7. Map gtk-go-back-ltr, gtk-go-back-rtl, gtk-go-forward-ltr, and gtk-go-forward-rtl.
 8. Modify gtk-about and gtk-home KDE icons mappings.
 9. Fix checkbox shadow.
10. Dont allow Mozilla scrollbars to be disabled.

0.56.2
------
1. Use case-insesitive string compares when checking Qt and KDE config files.
2. Fix some issues wth Firefox 3beta4.
3. Fix mouse over for up spin button.
4. To aid testing with Firefox 3, edit your qtcurvestylerc and add the following
   line:
        newFirefox=true
6. Don't indicate default button if it is disabled.

0.56.1
------
1. Fix errors when using corner default button indicator and no coloured
   mouse over.
2. Fix for OpenOffice.org blanking combobox text when mouse over arrow.

0.56
----
1. Change default settings:
        Dont animate progressbars
        Frameless groupboxes
2. Correctly position corner indicator.
3. Use mouse over colours for corner indicator.
4. Fix for text of selected check/radios on menubars in Java swing apps.
5. Fix for toolbar handles of Java swing apps.